# ExpenseTrackerAnalysis

./: .gitignore  README.md  main.py  pyproject.toml
data/: kaggle_script.py
src/: clean_data.ipynb  inspect_data.ipynb  inspect_data.py  kaggle_script.py  raw_data_loader.py
