[project]
name = "expensetrackeranalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "kagglehub[pandas-datasets]>=1.0.0",
]
